--- a/app/src/main/res/layout/fragment_note_content.xml
+++ b/app/src/main/res/layout/fragment_note_content.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/teal_200"
     android:orientation="vertical"
+    android:layout_gravity="center"
     tools:context=".NoteFragment">
 
     <ImageView
@@ -17,7 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/back" />
+        android:text="@string/back"
+        android:id="@+id/btn_Back"/>
 
 
 </LinearLayout>
