--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -3,11 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:background="@color/purple_200"
     android:orientation="vertical"
-    tools:context=".NoteFragment"
-    android:background="@color/purple_200">
-
-
+    tools:context=".NoteFragment">
 
 
 </LinearLayout>
