--- a/app/src/main/res/layout/fragment_note_content.xml
+++ b/app/src/main/res/layout/fragment_note_content.xml
@@ -12,13 +12,15 @@
         android:id="@+id/container_child"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:padding="0dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_Back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:padding="0dp"
         android:text="@string/back" />
 
 
