--- a/app/src/main/res/layout/fragment_note_content_child.xml
+++ b/app/src/main/res/layout/fragment_note_content_child.xml
@@ -12,7 +12,17 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:padding="0dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/next_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/next_note"
+        android:padding="0dp"
+        />
 
 
 </LinearLayout>
