--- a/app/src/main/res/layout/fragment_activity_menu.xml
+++ b/app/src/main/res/layout/fragment_activity_menu.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/teal_200"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:text="@string/fragment_activity_menu"
+    android:textSize="@dimen/Text_size_Menu_Fragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/teal_200"
+        android:gravity="center"
+        android:text="@string/click_on_the_button"
+        android:textSize="@dimen/Text_size_Menu_Fragment" />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="252dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:outlineAmbientShadowColor="@color/black"
+        android:text="@string/add_new_note"
+        android:textColor="@color/black"
+        android:textSize="@dimen/Text_size_Menu_Fragment"
+        app:rippleColor="@color/black" />
+
+
+</LinearLayout>
