--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -4,7 +4,9 @@
 <item
     android:id="@+id/action_about"
     android:title="@string/about"
-    app:showAsAction="never" />
+    app:showAsAction="always"
+    android:icon="@drawable/ic_baseline_add_comment_24"
+    />
 
     <item
         android:id="@+id/action_exit"
