--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,9 @@
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1" />
+  <androidx.appcompat.widget.Toolbar
+      android:layout_width="match_parent"
+      android:layout_height="?actionBarSize"/>
 
 
   </LinearLayout>
