--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_gravity="center"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+  <com.google.android.material.appbar.AppBarLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@android:color/tab_indicator_text"
+        android:foregroundTint="#853939"
+        app:subtitle="Bla Bla Bla"
+        app:subtitleTextColor="#AAFFFFFF"
+        android:fontFamily="sans-serif-condensed-light"
+        app:title="MyAPP"
+        app:titleTextColor="#AAFFFFFF" />
+
+  </com.google.android.material.appbar.AppBarLayout>
 
   <FrameLayout
       android:id="@+id/notes"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="1" />
-  <androidx.appcompat.widget.Toolbar
-      android:layout_width="match_parent"
-      android:layout_height="?actionBarSize"/>
 
 
-  </LinearLayout>
+</LinearLayout>
