--- a/app/src/main/res/layout/fragment_activity_menu.xml
+++ b/app/src/main/res/layout/fragment_activity_menu.xml
@@ -9,6 +9,7 @@
     android:text="@string/fragment_activity_menu"
     android:textSize="@dimen/Text_size_Menu_Fragment">
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,6 +19,7 @@
         android:textSize="@dimen/Text_size_Menu_Fragment" />
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/new_note"
         android:layout_width="252dp"
         android:layout_height="wrap_content"
         android:gravity="center"
