Урок 9 добавил Snackbar создал initView() и вынес в него setOnClickListener

--- a/app/src/main/res/layout/fragment_lesson_ninth.xml
+++ b/app/src/main/res/layout/fragment_lesson_ninth.xml
@@ -10,7 +10,12 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnToast"
-        android:text="@string/view_toast"
+        android:text="@string/showToast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSnackBar"
+        android:text="@string/showSnackbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
