Урок 9 создал SnackBarWithAction + добавил возможность вызвать Toast из SnackBar

--- a/app/src/main/res/layout/fragment_lesson_ninth.xml
+++ b/app/src/main/res/layout/fragment_lesson_ninth.xml
@@ -18,5 +18,10 @@
         android:text="@string/showSnackbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnSnackBarWithAction"
+        android:text="@string/ShowSnackBarWithAction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
