Урок 9 создал AlertDialog)))

--- a/app/src/main/res/layout/fragment_lesson_ninth.xml
+++ b/app/src/main/res/layout/fragment_lesson_ninth.xml
@@ -23,5 +23,10 @@
         android:text="@string/ShowSnackBarWithAction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnAlertDialog"
+        android:text="@string/ShowAlertDialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
