Урок 9  новый макет dialog_custom.xml

--- a/app/src/main/res/layout/fragment_lesson_ninth.xml
+++ b/app/src/main/res/layout/fragment_lesson_ninth.xml
@@ -28,5 +28,10 @@
         android:text="@string/ShowAlertDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnAlertDialogCustom"
+        android:text="@string/showAlertDialogCustom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
