Урок 9  DialogFragment c сохраниением состояния

--- a/app/src/main/res/layout/fragment_lesson_ninth.xml
+++ b/app/src/main/res/layout/fragment_lesson_ninth.xml
@@ -33,5 +33,10 @@
         android:text="@string/showAlertDialogCustom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnDialogFragment"
+        android:text="@string/DialogFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
