Урок 9  DialogFragmentCustom c сохраниением состояния (ShowToast)

--- a/app/src/main/res/layout/fragment_lesson_ninth.xml
+++ b/app/src/main/res/layout/fragment_lesson_ninth.xml
@@ -38,5 +38,11 @@
         android:text="@string/DialogFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnDialogFragmentCustom"
+        android:text="@string/DialogFragmentCustom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
