--- a/app/src/main/res/layout/fragment_lesson_ninth.xml
+++ b/app/src/main/res/layout/fragment_lesson_ninth.xml
@@ -43,6 +43,11 @@
         android:text="@string/DialogFragmentCustom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnBottomSheetDialogFragment"
+        android:text="Показать BottomSheetDialogFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
